--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,14 @@
     <artifactId>spring-boot-crud</artifactId>
 	<name>spring-boot-crud</name>
     
-    <parent>
-        <artifactId>parent-boot-2</artifactId>
-        <groupId>com.baeldung</groupId>
-        <version>0.0.1-SNAPSHOT</version>
-        <relativePath>../parent-boot-2</relativePath>
-    </parent>
-    
+    <groupId>com.baeldung</groupId>
+    <version>1.0.0-SNAPSHOT</version>
+    	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.1.3.RELEASE</version>
+		<relativePath/> <!-- lookup parent from repository -->
+	</parent>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
